# hiss

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  TODO  activate  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
hiss/: __init__.py  cli.py
src/: cli.py
src/hiss/: __init__.py  cli.py  magic.py
src/hiss/cli/: __init__.py  config.py  magic.py  virtualenv.py
test/: test_hiss.py
